--- a/index.html
+++ b/index.html
@@ -15,11 +15,11 @@
           <input id="new-task"class="task" type="text"><button>Add</button>
         </div>
       </p><h3>Todo</h3>
-      <ul id="incompleteTasks">
+      <ul id="incomplete-tasks">
         <li>
           <input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
         </li>
-        <li class="editMode">
+        <li class="edit-mode">
           <input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit">Save</button><button class="delete"><img src="./remove.svg"></button>
         </li>
       </ul>
@@ -30,6 +30,6 @@
         </li>
       </ul>
     </div>
-    <script type="text/javascript" SRC="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
