--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body>
-    <div class="aaa">
+    <div class="show-area">
       <img src="./eisenhower-matrix.jpg"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
-    <div class="centered-main-page-element">
+    <div class="working-area">
       <p id="topSectionForAddingElementToList">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
