--- a/index.html
+++ b/index.html
@@ -4,30 +4,30 @@
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   </head>
-  <body>
+  <body class="page">
     <div class="show-area">
-      <img src="./eisenhower-matrix.jpg"><a class="more_inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img src="./eisenhower-matrix.jpg"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="working-area">
       <p id="topS-ect">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text"><button>Add</button>
+          <input id="new-task"class="task" type="text"><button class="btn">Add</button>
         </div>
       </p>
-      <h3>Todo</h3>
-      <ul id="incomplete-tasks">
-        <li>
-          <input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+      <h3 class="title">Todo</h3>
+      <ul class="list" id="incomplete-tasks">
+        <li class="item">
+          <input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg"></button>
         </li>
-        <li class="edit-mode">
-          <input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit">Save</button><button class="delete"><img src="./remove.svg"></button>
+        <li class="edit-mode item">
+          <input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit btn">Save</button><button class="delete btn"><img src="./remove.svg"></button>
         </li>
       </ul>
-      <h3>Completed</h3>
-      <ul id="completed-tasks">
-        <li>
-          <input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button>
+      <h3 class="title">Completed</h3>
+      <ul class="list" id="completed-tasks">
+        <li class="item">
+          <input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg"></button>
         </li>
       </ul>
     </div>
