--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <img src="./eisenhower-matrix.jpg"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </div>
     <div class="working-area">
-      <p id="topS-ect">
+      <p id="topS-ewect">
         <label for="new-task">Add Item</label>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text"><button class="btn">Add</button>
