--- a/index.html
+++ b/index.html
@@ -5,32 +5,36 @@
     <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body class="page">
-    <div class="show-area">
+    <section class="show-area">
       <img src="./eisenhower-matrix.jpg"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
-    </div>
-    <div class="working-area">
-      <p id="topS-ewect">
-        <label for="new-task">Add Item</label>
+    </section>
+    <section class="working-area">
+      <article>
+        <h3 class="title">Add Item</h3>
         <div class="task-row-wrapper">
           <input id="new-task"class="task" type="text"><button class="btn">Add</button>
         </div>
-      </p>
-      <h3 class="title">Todo</h3>
-      <ul class="list" id="incomplete-tasks">
-        <li class="item">
-          <input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg"></button>
-        </li>
-        <li class="edit-mode item">
-          <input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit btn">Save</button><button class="delete btn"><img src="./remove.svg"></button>
-        </li>
-      </ul>
-      <h3 class="title">Completed</h3>
-      <ul class="list" id="completed-tasks">
-        <li class="item">
-          <input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg"></button>
-        </li>
-      </ul>
-    </div>
+      </article>
+      <article>
+        <h3 class="title">Todo</h3>
+        <ul class="list" id="incomplete-tasks">
+          <li class="item">
+            <input type="checkbox"><label class="task lbl">Pay Bills</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg"></button>
+          </li>
+          <li class="edit-mode item">
+            <input type="checkbox"><label class="task lbl">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit btn">Save</button><button class="delete btn"><img src="./remove.svg"></button>
+          </li>
+        </ul>
+      </article>
+      <article>
+        <h3 class="title">Completed</h3>
+        <ul class="list" id="completed-tasks">
+          <li class="item">
+            <input type="checkbox" checked><label class="task lbl">See the Doctor</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg"></button>
+          </li>
+        </ul>
+      </article>
+    </section>
     <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
