feat: add tag alt to rule 1.2 in html-and-css-extended.md

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body class="page">
     <section class="show-area">
-      <img src="./eisenhower-matrix.jpg"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+      <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </section>
     <section class="working-area">
       <article>
@@ -19,10 +19,10 @@
         <h3 class="title">Todo</h3>
         <ul class="list" id="incomplete-tasks">
           <li class="item">
-            <input type="checkbox"><label class="task lbl">Pay Bills</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg"></button>
+            <input type="checkbox"><label class="task lbl">Pay Bills</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg" alt=""></button>
           </li>
           <li class="edit-mode item">
-            <input type="checkbox"><label class="task lbl">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit btn">Save</button><button class="delete btn"><img src="./remove.svg"></button>
+            <input type="checkbox"><label class="task lbl">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit btn">Save</button><button class="delete btn"><img src="./remove.svg" alt=""></button>
           </li>
         </ul>
       </article>
@@ -30,7 +30,7 @@
         <h3 class="title">Completed</h3>
         <ul class="list" id="completed-tasks">
           <li class="item">
-            <input type="checkbox" checked><label class="task lbl">See the Doctor</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg"></button>
+            <input type="checkbox" checked><label class="task lbl">See the Doctor</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg" alt=""></button>
           </li>
         </ul>
       </article>
