--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
   <head><title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
   </head>
   <body class="page">
     <section class="show-area">
@@ -35,6 +35,6 @@
         </ul>
       </article>
     </section>
-    <script type="text/javascript" src="app.js"></script>
+    <script src="app.js"></script>
   </body>
 </html>
