--- a/index.html
+++ b/index.html
@@ -2,22 +2,22 @@
 <html>
   <head><title>Todo App</title>
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
-    <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
   </head>
   <body class="page">
     <section class="show-area">
       <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
     </section>
     <section class="working-area">
-      <article>
-        <h3 class="title">Add Item</h3>
-        <div class="task-row-wrapper">
-          <input id="new-task"class="task" type="text"><button class="btn">Add</button>
+      <article class="add">
+        <h3 class="title add__title">Add Item</h3>
+        <div class="add__wrapper add-wrap">
+          <input id="new-task"class="task add-wrap__task" type="text"><button class="btn add-wrap__btn">Add</button>
         </div>
       </article>
-      <article>
-        <h3 class="title">Todo</h3>
-        <ul class="list" id="incomplete-tasks">
+      <article class="todo">
+        <h3 class="title todo__title">Todo</h3>
+        <ul class="list todo__list" id="incomplete-tasks">
           <li class="item">
             <input type="checkbox"><label class="task lbl">Pay Bills</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg" alt=""></button>
           </li>
@@ -26,15 +26,15 @@
           </li>
         </ul>
       </article>
-      <article>
-        <h3 class="title">Completed</h3>
-        <ul class="list" id="completed-tasks">
+      <article class="completed">
+        <h3 class="title completed__title">Completed</h3>
+        <ul class="list completed__list" id="completed-tasks">
           <li class="item">
             <input type="checkbox" checked><label class="task lbl">See the Doctor</label><input type="text" class="task"><button class="edit btn">Edit</button><button class="delete btn"><img src="./remove.svg" alt=""></button>
           </li>
         </ul>
       </article>
     </section>
-    <script src="app.js"></script>
+    <script type="text/javascript" src="app.js"></script>
   </body>
 </html>
